# Hoid

./: AGENTS.md  README.md  main.py  pyproject.toml  tars.db
app/api/: CONTRACTS.md
backend/: .env.example  cleanup_duplicate_flashcards.py  seed_master_deck.py  seed_vocabulary.py  tars.db
backend/app/: main.py
backend/app/core/: config.py  (+1 more)
backend/backups/: tars.db.pre-dedupe-20260718  tars.db.pre-rebuild-20260717-223012
backend/scripts/: cleanup_duplicate_decks.py
backend/seed_data/: hsk-vocabulary.json  starter-deck.json
backend/tests/: conftest.py  test_decks.py  test_flashcards.py  test_llm.py  test_review.py  test_roleplay.py  test_roleplay_integration.py  test_srs.py  test_stt.py  test_sync.py  test_tts.py  test_vocabulary.py
mobile/: app.config.js  app.json  eas.json  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tailwind.config.js
mobile/app/: _layout.tsx  review.tsx
mobile/components/: CategoryRow.tsx  CategoryTag.tsx  ClozeInput.tsx  DeckCard.tsx  DeckCarousel.tsx  FailingTokenRow.tsx  FailingTokensList.tsx  GlassCard.tsx  GlassDock.tsx  ProgressBar.tsx  ReviewResult.tsx  ReviewStackCard.tsx  ToastPopup.tsx  UserHeader.tsx
mobile/data/: hsk-course.json  hsk-vocabulary.json  starter-deck.json  test.json
mobile/lib/: api.ts  carousel-animations.ts  cloze.ts  database.ts  dimens.ts  local-date.ts  schema.ts  srs.ts  sync.ts  theme.ts  useNavigateOnce.ts
mobile/plugins/: withLocalNetworkSecurity.js
mobile/stores/: useDeckDetailStore.ts  useReviewStore.ts  useSettingsStore.ts  useVocabularyStore.ts
(+57 files in other folders)
